--- a/index.html
+++ b/index.html
@@ -5,10 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dourado Network – Salas VIP en Aeropuertos</title>
-    <meta name="description"
-        content="Dourado Network monta salas VIP en aeropuertos de Colombia y México con servicios de spa, duchas, áreas de descanso y más.">
+    <meta name="description" content="Dourado Network monta salas VIP en aeropuertos de Colombia y México con servicios de spa, duchas, áreas de descanso y más.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://douradonetwork.com">
+    <link rel="icon" href="src/images/favicon.ico">
+    <link rel="manifest" href="/manifest.json">
+
+    <!-- Tipografía -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="src/styles/style.css">
+    <link rel="stylesheet" href="src/styles/style.css">
+
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:title" content="Dourado Network – Salas VIP en Aeropuertos">
+    <meta property="og:description" content="Salas VIP en Colombia y México con spa, duchas, descanso y más.">
+    <meta property="og:image" content="https://douradonetwork.com/assets/og-image.jpg">
+    <meta property="og:url" content="https://douradonetwork.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Dourado Network – Salas VIP en Aeropuertos">
+    <meta name="twitter:description" content="Salas VIP en Colombia y México con spa, duchas, descanso y más.">
+    <meta name="twitter:image" content="https://douradonetwork.com/src/images/juego.png">
+
+    <!-- Datos estructurados JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Dourado Network",
+      "url": "https://douradonetwork.com",
+      "logo": "https://douradonetwork.com/assets/logo.png",
+      "description": "Salas VIP en aeropuertos de Colombia y México con spa, duchas, comida y zonas de descanso.",
+      "areaServed": ["CO", "MX"],
+      "sameAs": [
+        "https://www.instagram.com/douradonetwork",
+        "https://www.facebook.com/douradonetwork"
+      ]
+    }
+    </script>
 </head>
 
 <body>
@@ -28,13 +63,11 @@
         </div>
     </header>
 
-    <!-- Hero / Cabecera -->
+    <!-- Hero -->
     <section class="hero">
         <div class="container content">
             <h1>Bienvenido a Dourado Network</h1>
-
-            <p>Salas VIP en aeropuertos de Colombia y México. Relájate, trabaja y disfruta de servicios exclusivos
-                mientras esperas tu vuelo.</p>
+            <p>Salas VIP en aeropuertos de Colombia y México. Relájate, trabaja y disfruta de servicios exclusivos mientras esperas tu vuelo.</p>
             <a href="#services" class="btn">Conoce más</a>
         </div>
     </section>
@@ -45,28 +78,28 @@
             <h2 style="text-align:center; margin-bottom:2rem;">Nuestros Servicios</h2>
             <div class="services">
                 <div class="card">
-                    <img src="src/images/ducha.png" alt="Duchas calientes">
+                    <img src="src/images/ducha.png" alt="Duchas calientes privadas" loading="lazy">
                     <div class="info">
                         <h3>Duchas Calientes</h3>
                         <p>Espacios privados con agua caliente y toallas de cortesía.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="src/images/spa.png" alt="Spa">
+                    <img src="src/images/spa.png" alt="Servicio de spa y masajes rápidos" loading="lazy">
                     <div class="info">
                         <h3>Spa & Masajes</h3>
                         <p>Relájate con masajes express y zonas de aromaterapia.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="src/images/comida.png">
+                    <img src="src/images/comida.png" alt="Buffet y bebidas premium" loading="lazy">
                     <div class="info">
                         <h3>Área de Comidas</h3>
                         <p>Buffet variado, snacks gourmet y bebidas premium.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="src/images/juego.png" alt="Juegos de mesa y billar">
+                    <img src="src/images/juego.png" alt="Juegos de mesa y billar en la sala VIP" loading="lazy">
                     <div class="info">
                         <h3>Entretenimiento</h3>
                         <p>Billar, juegos de mesa y televisores para eventos en vivo.</p>
@@ -76,34 +109,34 @@
         </div>
     </section>
 
-    <!-- Comodidades Destacadas -->
+    <!-- Comodidades -->
     <section id="features">
         <div class="container">
             <h2 style="text-align:center; margin-bottom:2rem;">Comodidades Premium</h2>
             <div class="features">
                 <div class="card">
-                    <img src="src/images/sillas.png" alt="Sillas reclinables">
+                    <img src="src/images/sillas.png" alt="Sillas reclinables ergonómicas" loading="lazy">
                     <div class="info">
                         <h3>Sillas Reclinómicas</h3>
                         <p>Descanso ergonómico en asientos de última generación.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="src/images/pods.png" alt="Pods de descanso">
+                    <img src="src/images/pods.png" alt="Pods de descanso tipo cápsula" loading="lazy">
                     <div class="info">
                         <h3>Pods de Descanso</h3>
                         <p>Privacidad total con camas estilo Google Pods.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="src/images/empresarial.png" alt="Sala empresarial">
+                    <img src="src/images/empresarial.png" alt="Sala empresarial con Wi-Fi rápido" loading="lazy">
                     <div class="info">
                         <h3>Ambiente Empresarial</h3>
                         <p>Espacios de trabajo con Wi-Fi ultra rápido y salas de reunión.</p>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="src/images/relajacion.png" alt="Técnicas de relajación">
+                    <img src="src/images/relajacion.png" alt="Técnicas de relajación y música ambiental" loading="lazy">
                     <div class="info">
                         <h3>Técnicas de Relajación</h3>
                         <p>Sesiones de respiración guiada y música ambiental selecta.</p>
@@ -161,8 +194,7 @@
     <footer>
         <div class="container">
             <p>© 2025 Dourado Network. Todos los derechos reservados.</p>
-            <p><small>Imágenes cortesía de <a href="https://unsplash.com" target="_blank"
-                        style="color:var(--accent); text-decoration:none;">Unsplash</a></small></p>
+            <p><small>Imágenes cortesía de <a href="https://unsplash.com" target="_blank" style="color:var(--accent); text-decoration:none;">Unsplash</a></small></p>
         </div>
     </footer>
 
